@@ -20,7 +20,6 @@ src/xfpm-manager.c
 src/xfpm-inhibit.c
 src/xfpm-screen-saver.c
 src/xfce4-power-manager.desktop.in
-libxfpm/hal-proxy.c
 libxfpm/hal-battery.c
 libxfpm/hal-device.c
 libxfpm/hal-marshal.c
