@@ -38,14 +38,6 @@ typedef enum
 
 typedef enum
 {
-    SHOW_ICON_ALWAYS,
-    SHOW_ICON_WHEN_BATTERY_PRESENT,
-    SHOW_ICON_WHEN_BATTERY_CHARGING_DISCHARGING
-    
-} XfpmShowIcon;
-
-typedef enum
-{
     BATTERY_FULLY_CHARGED,
     BATTERY_NOT_FULLY_CHARGED,
     BATTERY_IS_CHARGING,
