@@ -1,4 +1,7 @@
 
+2009-03-28 17:19 Ali aliov@xfce.org 
+	 * : Handle hald is not running or disconnected
+
 2009-03-28 14:47 Ali aliov@xfce.org 
 	 * : Move the context menu to xfpm-tray-icon
 
